[project]
name = "cddiagram"
version = "0.0.3"
authors = [
  { name="Alberto Azzari", email="alberto.azzari@univr.it" },
]
description = "Critical Difference diagram generator in pure Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = [
  "build",
  "pytest",
  "twine",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cddiagram"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Homepage = "https://github.com/albertoazzari/cd-diagram"
Issues = "https://github.com/albertoazzari/cd-diagram/issues"
Source = "https://github.com/albertoazzari/cd-diagram"

